Fix placeholder display issue on small screen or dark theme and change spoiler text line height

--- a/client/src/assets/styles/styles-variables.scss
+++ b/client/src/assets/styles/styles-variables.scss
@@ -108,10 +108,6 @@ $bangumin-material-dark-pink-blue-grey-theme: mat-dark-theme($bangumin-material-
   }
 
   .spoiler-text {
-    padding: 4px 4px 4px 4px;
-    box-decoration-break: clone;
-    text-decoration: none;
-    border-radius: 5px;
     color: mat-color($accent, default-contrast);
   }
 
